fix overlapping buttons in bible verse viewer

--- a/mobile/www/css/index.css
+++ b/mobile/www/css/index.css
@@ -87,3 +87,7 @@
 .pending_partner {
     color: grey;
 }
+
+#viewer_container {
+    margin-left: 10px;
+}
